Fix text being off center in .confernece

--- a/styles.css
+++ b/styles.css
@@ -323,6 +323,7 @@ body:nth-child(2) {
 .conference a {
     color: var(--text-white);
     font-size: 1.25rem;
+    height: 150px;
 }
 
 footer {
